--- a/.github/ISSUE_TEMPLATE/QUESTION.yml
+++ b/.github/ISSUE_TEMPLATE/QUESTION.yml
@@ -18,12 +18,12 @@ body:
         Thank you for opening an issue. Please note that we try to keep MiMiC - I/O Controller issue tracker reserved for bug reports and feature requests.
         For general usage questions, please visit the [Rætro.Community](https://www.raetro.org/community).
 
-  - type: input
+  - type: textarea
     id: question
     attributes:
       label: Ask a question about MiMiC
       placeholder: |
-        Ask your question here! Please keep focused on the questions related to MiMiC only.
+        Ask your question here! Please keep the questions related to MiMiC only.
     validations:
       required: true
 
