--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -1,13 +1,13 @@
 ################################################################################
 # SPDX-License-Identifier: CC0-1.0
 # SPDX-FileType: OTHER
-# SPDX-FileCopyrightText: (c) 2005-2021, The Raetro authors and contributors
+# SPDX-FileCopyrightText: (c) 2021, The Raetro authors and contributors
 ################################################################################
-name: "Bug Report"
-description: "Let us know about an unexpected error, a crash, or an incorrect behavior."
-title: 'BUG: '
+name: "Feature Request"
+description: "Suggest a new feature or other enhancement."
+title: 'Title of your Feature Request'
 labels:
-  - bug
+  - enhancement
 assignees:
   - boogermann
 body:
@@ -16,115 +16,71 @@ body:
       value: |
         Hi there,
 
-        Thank you for opening an issue. Please note that we try to keep the issue tracker reserved for bug reports and feature requests.
-        Please make sure to [search for existing issues](https://github.com/raetro/mimic_firmware/issues) before filing a new one!
+        Please note that we try to keep the issue tracker reserved for bug reports and feature requests.
+        Make sure to [search for existing feature requests](https://github.com/raetro/mimic_firmware/issues?q=label%3Aenhancement) before filing a new one!
 
-        For general usage questions, please visit [Rætro.Docs](https://docs.raetro.org/mimic-nsx).
+        For general usage questions, please visit the user guide at [Rætro.Docs](https://docs.raetro.org/mimic-nsx).
+
   - type: input
-    id: version
+    id: current_version
     attributes:
-      label: Version (or build number)
+      label: MiMiC NSX version (or build number)
       placeholder: "0.1.1, 1.0.3-fb597ed"
       description: |
-        You can find the version in the about dialog.
+        Open the about menu to show the version, and write the version here.
+        This will record which version was current at the time of your feature request, to help manage the request backlog.
 
-        If you are not running the latest version, please try upgrading because your issue may have already been fixed.
-    validations:
-      required: true
-
-  - type: dropdown
-    id: fpga
-    attributes:
-      label: What FPGA board are you seeing the problem on?
-      multiple: false
-      options:
-        - Terasic DE10-Nano
-        - Arrow DECA
-        - Arrow/Trenz CYC1000
-        - Trenz C10LP-REFKIT
-        - NovTech Chameleon96
-
-  - type: textarea
-    id: app
-    attributes:
-      label: FPGA Core or Other Software
-      description: If you're reporting a bug about MiMiC's interaction with an FPGA Core or another software, what FPGA Core/software? What versions?
-      placeholder: |
-        JTCPS2 (19691231)
-        RetroArch v1.9.12
-        My Awesome Game v0.3 (include a code snippet if it would help!)
-    validations:
-      required: false
-
-  - type: textarea
-    id: steps
-    attributes:
-      label: Steps to reproduce
-      description: |
-        Please list the full steps required to reproduce the issue
-      placeholder: |
-        1. _load core X_
-        2. _load game Y_ into _core X_
-        3. _map_ joystick
+        If you're not using the latest version, please check to see if something related to your request has already been implemented in a later version.
     validations:
       required: true
 
   - type: textarea
-    id: expected_behavior
+    id: use_cases
     attributes:
-      label: Expected Behavior
-      description: If you want to include screenshots, paste them into the markdown editor below or follow up with a separate comment.
-      placeholder: What were you expecting?
-    validations:
-      required: false
+      label: Use-cases
+      description: |
+        In order to properly evaluate a feature request, it is necessary to understand the use-cases for it.
 
-  - type: textarea
-    id: actual_behavior
-    attributes:
-      label: Actual Behavior
-      placeholder: What happened instead?
+        Please describe below the end goal you are trying to achieve that has led you to request this feature.
+      placeholder: |
+        Please keep this section focused on the problem and not on the suggested solution. We'll get to that in a moment, below!
     validations:
       required: true
 
-  - type: input
-    id: logs
+  - type: textarea
+    id: attempted_solutions
     attributes:
-      label: Debug Output/Crash Output
+      label: Attempted Solutions
       description: |
-        Full debug output can be obtained by running MiMiC with UART or by setting the environment variable `MIMIC_LOG=trace`.
-        Please create a GitHub Gist containing the debug output. Please do _not_ paste the debug output in the issue, since debug output is long.
-        Share a link to a GitHub Gist containing the output of the `crash.log` file.
+        If you've already tried to solve the problem within MiMiC - I/O Controller's existing features and
+        found a limitation that prevented you from succeeding, please describe it below in as much detail as possible.
+
+        Ideally, this would include real configuration snippets that you tried, command lines you ran, and what results you got in each case.
       placeholder: |
-        https://gist.github.com/myuser/e6cb69a18488cbd420d5bafdd6bf0ba
+        Please remove any sensitive information such as passwords before sharing configuration snippets and command lines.
     validations:
       required: false
 
   - type: textarea
-    id: bug_context
+    id: proposal
     attributes:
-      label: Additional Context
+      label: Proposal
       description: |
-        Are there anything atypical about your situation that we should know?
-        For example: is MiMiC NSX running on an unsupported device? Are you passing any unusual command line options or using any environment variables?
+        If you have an idea for a way to address the problem via a change to MiMiC features, please describe it below.
+
+        In this section, it's helpful to include specific examples of how what you are suggesting might look in configuration files,
+        or on the command line, since that allows us to understand the full picture of what you are proposing.
+
+      placeholder: |
+        If you're not sure of some details, don't worry! When we evaluate the feature request we may suggest modifications as necessary to work within the design constraints of MiMiC.
     validations:
       required: false
 
   - type: textarea
-    id: bug_config_file
+    id: references
     attributes:
-      label: Configuration Files
-      placeholder: |
-        Paste the relevant parts of your MiMiC.ini configuration file.
-    validations:
-      required: false
-
-  - type: input
-    id: bug_firmware
-    attributes:
-      label: Opened Issues and Pull Requests
-      placeholder: "#1234"
-      description: |
-        Are there any other GitHub issues (open or closed) or Pull Requests that should be linked here? For example: #1234
+      label: References
+      placeholder: Speficy any reference that might be used to get this feature done
     validations:
       required: false
 
@@ -132,7 +88,7 @@ body:
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://coc.raetro.org)
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/raetro/community/blob/main/code-of-conduct.md)
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
