--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -1,13 +1,13 @@
 ################################################################################
 # SPDX-License-Identifier: CC0-1.0
 # SPDX-FileType: OTHER
-# SPDX-FileCopyrightText: (c) 2021, The Raetro authors and contributors
+# SPDX-FileCopyrightText: (c) 2005-2021, The Raetro authors and contributors
 ################################################################################
-name: "Feature Request"
-description: "Suggest a new feature or other enhancement."
-title: 'Title of your Feature Request'
+name: "Bug Report"
+description: "Let us know about an unexpected error, a crash, or an incorrect behavior."
+title: 'Title of your Bug Report'
 labels:
-  - enhancement
+  - bug
 assignees:
   - boogermann
 body:
@@ -16,71 +16,116 @@ body:
       value: |
         Hi there,
 
-        Please note that we try to keep the issue tracker reserved for bug reports and feature requests.
-        Make sure to [search for existing feature requests](https://github.com/raetro/mimic_firmware/issues?q=label%3Aenhancement) before filing a new one!
+        Thank you for opening an issue. Please note that we try to keep the issue tracker reserved for bug reports and feature requests.
+        Make sure to [search for existing issues](https://github.com/raetro/mimic_firmware/issues?q=label%3Abug) before filing a new one!
 
         For general usage questions, please visit the user guide at [Rætro.Docs](https://docs.raetro.org/mimic-nsx).
 
   - type: input
-    id: current_version
+    id: version
     attributes:
-      label: MiMiC NSX version (or build number)
+      label: Version (or build number)
       placeholder: "0.1.1, 1.0.3-fb597ed"
       description: |
-        Open the about menu to show the version, and write the version here.
-        This will record which version was current at the time of your feature request, to help manage the request backlog.
+        You can find the version in the about dialog.
 
-        If you're not using the latest version, please check to see if something related to your request has already been implemented in a later version.
+        If you are not running the latest version, please try upgrading because your issue may have already been fixed.
     validations:
       required: true
 
-  - type: textarea
-    id: use_cases
+  - type: dropdown
+    id: fpga
     attributes:
-      label: Use-cases
-      description: |
-        In order to properly evaluate a feature request, it is necessary to understand the use-cases for it.
-
-        Please describe below the end goal you are trying to achieve that has led you to request this feature.
-      placeholder: |
-        Please keep this section focused on the problem and not on the suggested solution. We'll get to that in a moment, below!
-    validations:
-      required: true
+      label: What FPGA board are you seeing the problem on?
+      multiple: false
+      options:
+        - Terasic DE10-Nano
+        - Arrow DECA
+        - Arrow/Trenz CYC1000
+        - Trenz C10LP-REFKIT
+        - NovTech Chameleon96
 
   - type: textarea
-    id: attempted_solutions
+    id: app
     attributes:
-      label: Attempted Solutions
-      description: |
-        If you've already tried to solve the problem within MiMiC - I/O Controller's existing features and
-        found a limitation that prevented you from succeeding, please describe it below in as much detail as possible.
-
-        Ideally, this would include real configuration snippets that you tried, command lines you ran, and what results you got in each case.
+      label: FPGA Core or Other Software
+      description: If you're reporting a bug about MiMiC's interaction with an FPGA Core or another software, what FPGA Core/software? What versions?
       placeholder: |
-        Please remove any sensitive information such as passwords before sharing configuration snippets and command lines.
+        JTCPS2 (19691231)
+        RetroArch v1.9.12
+        My Awesome Game v0.3 (include a code snippet if it would help!)
     validations:
       required: false
 
   - type: textarea
-    id: proposal
+    id: steps
     attributes:
-      label: Proposal
+      label: Steps to reproduce
       description: |
-        If you have an idea for a way to address the problem via a change to MiMiC features, please describe it below.
-
-        In this section, it's helpful to include specific examples of how what you are suggesting might look in configuration files,
-        or on the command line, since that allows us to understand the full picture of what you are proposing.
-
+        Please list the full steps required to reproduce the issue
       placeholder: |
-        If you're not sure of some details, don't worry! When we evaluate the feature request we may suggest modifications as necessary to work within the design constraints of MiMiC.
+        1. load core X
+        2. load game Y into core X
+        3. map joystick
     validations:
       required: false
 
   - type: textarea
-    id: references
+    id: expected_behavior
     attributes:
-      label: References
-      placeholder: Speficy any reference that might be used to get this feature done
+      label: Expected Behavior
+      description: If you want to include screenshots, paste them into the markdown editor below or follow up with a separate comment.
+      placeholder: What were you expecting?
+    validations:
+      required: false
+
+  - type: textarea
+    id: actual_behavior
+    attributes:
+      label: Actual Behavior
+      placeholder: What happened instead?
+    validations:
+      required: true
+
+  - type: input
+    id: logs
+    attributes:
+      label: Debug Output/Crash Output
+      description: |
+        Full debug output can be obtained by running MiMiC with UART or by setting the environment variable `MIMIC_LOG=trace`.
+        Please create a GitHub Gist containing the debug output. Please do _not_ paste the debug output in the issue, since debug output is long.
+        Share a link to a GitHub Gist containing the output of the `crash.log` file.
+      placeholder: |
+        https://gist.github.com/myuser/e6cb69a18488cbd420d5bafdd6bf0ba
+    validations:
+      required: false
+
+  - type: textarea
+    id: bug_context
+    attributes:
+      label: Additional Context
+      description: |
+        Are there anything atypical about your situation that we should know?
+        For example: is MiMiC NSX running on an unsupported device? Are you passing any unusual command line options or using any environment variables?
+    validations:
+      required: false
+
+  - type: textarea
+    id: bug_config_file
+    attributes:
+      label: Configuration Files
+      placeholder: |
+        Paste the relevant parts of your MiMiC.ini configuration file.
+    validations:
+      required: false
+
+  - type: input
+    id: bug_firmware
+    attributes:
+      label: Opened Issues and Pull Requests
+      placeholder: "#1234"
+      description: |
+        Are there any other GitHub issues (open or closed) or Pull Requests that should be linked here? For example: #1234
     validations:
       required: false
 
